@@ -1,5 +1,6 @@
 package com.ryan.tag.command;
 
+import com.ryan.tag.config.SettingsGUI;
 import com.ryan.tag.config.TagSettings;
 import com.ryan.tag.gameplay.Game;
 import net.kyori.adventure.text.Component;
@@ -13,7 +14,6 @@ import org.bukkit.entity.Player;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class TagCommand implements TabExecutor {
@@ -23,9 +23,9 @@ public class TagCommand implements TabExecutor {
             ChatColor.YELLOW + "" + ChatColor.BOLD + "Welcome to Tag! Here are the commands:",
             ChatColor.YELLOW + "/tag help" + ChatColor.DARK_GREEN + " -- " + ChatColor.YELLOW + "Prints this message.",
             ChatColor.YELLOW + "/tag <start/stop>" + ChatColor.DARK_GREEN + " -- " + ChatColor.YELLOW + "Starts or stops the game.",
-            ChatColor.YELLOW + "/tag length <seconds>" + ChatColor.DARK_GREEN + " -- " + ChatColor.YELLOW + "Sets the length of the game in minutes. Set the length to 0 for an infinite game.",
+            ChatColor.YELLOW + "/tag length <minutes>" + ChatColor.DARK_GREEN + " -- " + ChatColor.YELLOW + "Sets the length of the game in minutes. Set the length to 0 for an infinite game.",
             ChatColor.YELLOW + "/tag location <x> <z>" + ChatColor.DARK_GREEN + " -- " + ChatColor.YELLOW + "Sets the location of the game.",
-            ChatColor.YELLOW + "/tag randomlocation <true/false>" + ChatColor.DARK_GREEN + " -- " + ChatColor.YELLOW + "Sets whether the location of the game is random.",
+            ChatColor.YELLOW + "/tag location random" + ChatColor.DARK_GREEN + " -- " + ChatColor.YELLOW + "Makes the location of the game random.",
             ChatColor.YELLOW + "/tag border <size>" + ChatColor.DARK_GREEN + " -- " + ChatColor.YELLOW + "Sets the side length of the border in blocks.",
             ChatColor.YELLOW + "/tag settings" + ChatColor.DARK_GREEN + " -- " + ChatColor.YELLOW + "Views the current settings.",
             ChatColor.DARK_BLUE + "-----------------------------------------------------",
@@ -88,27 +88,32 @@ public class TagCommand implements TabExecutor {
             
         } else if (args[0].equalsIgnoreCase("location")) {
             try {
-                int x = Integer.parseInt(args[1]);
-                int z = Integer.parseInt(args[2]);
+                int x;
+                int z;
+                
+                if (args[1].equalsIgnoreCase("~")) {
+                    x = ((Player) sender).getLocation().getBlockX();
+                } else if (args[1].equalsIgnoreCase("random")) {
+                    TagSettings.setRandomizeLocation(true);
+                    sender.sendMessage(ChatColor.DARK_GREEN + "Tag will now use a " + ChatColor.YELLOW + "random " + ChatColor.DARK_GREEN + "location!");
+                    return true;
+                } else {
+                    x = Integer.parseInt(args[1]);
+                }
+                if (args[2].equalsIgnoreCase("~")) {
+                    z = ((Player) sender).getLocation().getBlockZ();
+                } else {
+                    z = Integer.parseInt(args[2]);
+                }
+                
                 TagSettings.setSpawnX(x);
                 TagSettings.setSpawnZ(z);
+                TagSettings.setRandomizeLocation(false);
                 sender.sendMessage(ChatColor.DARK_GREEN + "Location set to " + ChatColor.YELLOW + "x = " + TagSettings.getSpawnX() + ChatColor.DARK_GREEN + " and " + ChatColor.YELLOW + "z = " + TagSettings.getSpawnZ() + ChatColor.DARK_GREEN + ".");
             } catch (ArrayIndexOutOfBoundsException e) {
                 sender.sendMessage(ChatColor.RED + "No coordinates provided!");
             } catch (NumberFormatException e) {
                 sender.sendMessage(ChatColor.RED + "Could not set the location to " + ChatColor.YELLOW + "x = " + args[1] + ChatColor.RED + " and " + ChatColor.YELLOW + "z = " + args[2] + ChatColor.RED + ".");
-            }
-            
-        } else if (args[0].equalsIgnoreCase("randomlocation")) {
-            try {
-                TagSettings.setRandomizeLocation(Boolean.parseBoolean(args[1]));
-                if (TagSettings.doesRandomizeLocation()) {
-                    sender.sendMessage(ChatColor.DARK_GREEN + "Tag will now use a " + ChatColor.YELLOW + "random " + ChatColor.DARK_GREEN + "location!");
-                } else {
-                    sender.sendMessage(ChatColor.DARK_GREEN + "Tag will now use a " + ChatColor.YELLOW + "custom " + ChatColor.DARK_GREEN + "location!");
-                }
-            } catch (ArrayIndexOutOfBoundsException e) {
-                sender.sendMessage(ChatColor.RED + "No value provided!");
             }
             
         } else if (args[0].equalsIgnoreCase("border")) {
@@ -127,20 +132,22 @@ public class TagCommand implements TabExecutor {
             }
     
         } else if (args[0].equalsIgnoreCase("settings")) {
-            sender.sendMessage(ChatColor.DARK_GREEN + "" + ChatColor.BOLD + "Tag settings:");
-            if (TagSettings.isInfiniteGame()) {
-                sender.sendMessage(ChatColor.DARK_GREEN + "Game length: " + ChatColor.YELLOW + "infinite");
-            } else {
-                sender.sendMessage(ChatColor.DARK_GREEN + "Game length: " + ChatColor.YELLOW + TagSettings.getTimerLength() + " minutes");
-            }
-            
-            if (TagSettings.doesRandomizeLocation()) {
-                sender.sendMessage(ChatColor.DARK_GREEN + "Spawn Location: " + ChatColor.YELLOW + "random");
-            } else {
-                sender.sendMessage(ChatColor.DARK_GREEN + "Spawn location: " + ChatColor.YELLOW + "x = " + TagSettings.getSpawnX() + ChatColor.DARK_GREEN + " and" + ChatColor.YELLOW + " z = " + TagSettings.getSpawnZ());
-            }
-            
-            sender.sendMessage(ChatColor.DARK_GREEN + "Border size: " + ChatColor.YELLOW + TagSettings.getBorderSize() + " blocks");
+//            sender.sendMessage(ChatColor.DARK_GREEN + "" + ChatColor.BOLD + "Tag settings:");
+//            if (TagSettings.isInfiniteGame()) {
+//                sender.sendMessage(ChatColor.DARK_GREEN + "Game length: " + ChatColor.YELLOW + "infinite");
+//            } else {
+//                sender.sendMessage(ChatColor.DARK_GREEN + "Game length: " + ChatColor.YELLOW + TagSettings.getTimerLength() + " minutes");
+//            }
+//
+//            if (TagSettings.doesRandomizeLocation()) {
+//                sender.sendMessage(ChatColor.DARK_GREEN + "Spawn Location: " + ChatColor.YELLOW + "random");
+//            } else {
+//                sender.sendMessage(ChatColor.DARK_GREEN + "Spawn location: " + ChatColor.YELLOW + "x = " + TagSettings.getSpawnX() + ChatColor.DARK_GREEN + " and" + ChatColor.YELLOW + " z = " + TagSettings.getSpawnZ());
+//            }
+//
+//            sender.sendMessage(ChatColor.DARK_GREEN + "Border size: " + ChatColor.YELLOW + TagSettings.getBorderSize() + " blocks");
+    
+            SettingsGUI.showGUI((Player) sender);
             
         } else {
             printHelpMessage(sender);
@@ -158,8 +165,12 @@ public class TagCommand implements TabExecutor {
     @Nullable
     @Override
     public List<String> onTabComplete(@NotNull CommandSender sender, @NotNull Command command, @NotNull String alias, @NotNull String[] args) {
-        if (args.length == 1) return Arrays.asList("start", "stop", "help", "length", "location", "randomlocation", "border", "settings");
-        if (args[0].equalsIgnoreCase("randomlocation") && args.length == 2) return Arrays.asList("true", "false");
+        if (args.length == 1) return List.of("start", "stop", "help", "length", "location", "border", "settings");
+        if (args[0].equalsIgnoreCase("randomlocation") && args.length == 2) return List.of("true", "false");
+        if (args[0].equalsIgnoreCase("location")) {
+            if (args.length == 2) return List.of("~", "random");
+            if (args.length == 3) return List.of("~");
+        }
         
         return null;
     }
